--- a/streamlink/requirements.txt
+++ b/streamlink/requirements.txt
@@ -1,6 +1,19 @@
 astroid==2.4.2
 autopep8==1.5.4
 certifi==2021.5.30
+colorama==0.4.4
+isort==5.6.4
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+pycodestyle==2.6.0
+pylint==2.6.0
+six==1.15.0
+toml==0.10.2
+wincertstore==0.2
+wrapt==1.12.1
+astroid==2.4.2
+autopep8==1.5.4
+certifi==2021.5.30
 chardet==4.0.0
 colorama==0.4.4
 idna==2.10
@@ -14,121 +27,13 @@ pycodestyle==2.6.0
 pycryptodome==3.10.1
 pylint==2.6.0
 PySocks==1.7.1
-python-dotenv==0.17.1
+python-dotenv==0.18.0
 requests==2.25.1
 schedule==1.1.0
 six==1.15.0
-streamlink==2.1.2
+streamlink==2.2.0
 toml==0.10.2
 urllib3==1.26.5
-websocket-client==1.0.1
-wincertstore==0.2
-wrapt==1.12.1argon2-cffi @ file:///C:/ci/argon2-cffi_1613037869401/work
-async-generator @ file:///home/ktietz/src/ci/async_generator_1611927993394/work
-attrs @ file:///tmp/build/80754af9/attrs_1620827162558/work
-autopep8 @ file:///tmp/build/80754af9/autopep8_1620866417880/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-bleach @ file:///tmp/build/80754af9/bleach_1612211392645/work
-boto3 @ file:///home/conda/feedstock_root/build_artifacts/boto3_1624318483711/work
-botocore @ file:///home/conda/feedstock_root/build_artifacts/botocore_1624312772568/work
-brotlipy==0.7.0
-certifi==2021.5.30
-cffi @ file:///C:/ci/cffi_1613247431367/work
-chardet @ file:///D:/bld/chardet_1610093673558/work
-colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
-cryptography @ file:///C:/ci/cryptography_1616769504165/work
-cycler==0.10.0
-decorator==4.4.2
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-entrypoints==0.3
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1593328102638/work
-imageio @ file:///home/conda/feedstock_root/build_artifacts/imageio_1594044661732/work
-imageio-ffmpeg @ file:///home/conda/feedstock_root/build_artifacts/imageio-ffmpeg_1621542018480/work
-importlib-metadata @ file:///C:/ci/importlib-metadata_1617877477759/work
-ipykernel @ file:///C:/ci/ipykernel_1607454116140/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipython @ file:///C:/ci/ipython_1617120911285/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1610481889018/work
-iso-639==0.4.5
-iso3166==1.0.1
-isodate==0.6.0
-jedi @ file:///C:/ci/jedi_1606932640618/work
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1621238361758/work
-jmespath @ file:///tmp/build/80754af9/jmespath_1594304593830/work
-joblib @ file:///tmp/build/80754af9/joblib_1613502643832/work
-jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
-jupyter @ file:///C:/ci/jupyter_1607685287094/work
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1616770841739/work
-jupyter-console @ file:///tmp/build/80754af9/jupyter_console_1616615302928/work
-jupyter-core @ file:///C:/ci/jupyter_core_1612213515523/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-widgets @ file:///tmp/build/80754af9/jupyterlab_widgets_1609884341231/work
-jupyterthemes==0.20.0
-kiwisolver==1.3.1
-lesscpy==0.14.0
-libtools==0.3.3
-MarkupSafe @ file:///C:/ci/markupsafe_1621528502553/work
-matplotlib==3.4.2
-mistune @ file:///C:/ci/mistune_1607359457024/work
-mkl-fft==1.3.0
-mkl-random @ file:///C:/ci/mkl_random_1618854182866/work
-mkl-service==2.3.0
-moviepy==1.0.1
-nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
-nbconvert @ file:///C:/ci/nbconvert_1607370555148/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
-notebook @ file:///C:/ci/notebook_1621625801656/work
-numpy @ file:///C:/ci/numpy_and_numpy_base_1620831398996/work
-olefile @ file:///home/conda/feedstock_root/build_artifacts/olefile_1602866521163/work
-packaging @ file:///tmp/build/80754af9/packaging_1611952188834/work
-pandas @ file:///C:/ci/pandas_1618365625310/work
-pandocfilters @ file:///C:/ci/pandocfilters_1605114832805/work
-parso==0.7.0
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-Pillow @ file:///C:/ci/pillow_1617386320391/work
-ply==3.11
-proglog==0.1.9
-prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1623189609245/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1616415428029/work
-pycodestyle @ file:///tmp/build/80754af9/pycodestyle_1615748559966/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-pycryptodome==3.10.1
-pydub==0.25.1
-Pygments @ file:///tmp/build/80754af9/pygments_1621606182707/work
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
-pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
-pyrsistent @ file:///C:/ci/pyrsistent_1607359751294/work
-PySocks @ file:///C:/ci/pysocks_1605307512533/work
-python-dateutil @ file:///home/ktietz/src/ci/python-dateutil_1611928101742/work
-python-dotenv==0.18.0
-pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
-pywin32==228
-pywinpty @ file:///C:/ci/pywinpty_1607419945780/work
-pyzmq==20.0.0
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1623278325812/work
-QtPy==1.9.0
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1608156231189/work
-s3transfer @ file:///tmp/build/80754af9/s3transfer_1623278116614/work
-schedule==1.1.0
-scikit-learn @ file:///C:/ci/scikit-learn_1622739499047/work
-scipy @ file:///C:/ci/scipy_1618856124610/work
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1607525499227/work
-sip==4.19.13
-six @ file:///tmp/build/80754af9/six_1623709665295/work
-streamlink==2.2.0
-terminado==0.9.4
-testpath @ file:///home/ktietz/src/ci/testpath_1611930608132/work
-threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-tornado @ file:///C:/ci/tornado_1606924294691/work
-tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1623518955413/work
-traitlets @ file:///home/ktietz/src/ci/traitlets_1611929699868/work
-urllib3 @ file:///tmp/build/80754af9/urllib3_1615837158687/work
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
-webencodings==0.5.1
 websocket-client==1.1.0
-widgetsnbextension @ file:///C:/ci/widgetsnbextension_1607531582688/work
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605306162074/work
 wincertstore==0.2
-zipp @ file:///tmp/build/80754af9/zipp_1615904174917/work
+wrapt==1.12.1
